===================================
django-registration-redux changelog
===================================

Version 1.9, TBD
----------------
* Bugfix: Prevent resending an activation email if multiple
``RegistrationProfile`` objects exist for the given email address. -
`#311 <https://github.com/macropin/django-registration/pull/311>_`
* Bugfix: Add logging to ``RegistrationProfile.delete_expired_users``, use
``profile.activated`` instead of ``user.is_active``. -
`#308 <https://github.com/macropin/django-registration/pull/308>_`
* BACKWARDS-INCOMPATIBLE CHANGE: Change of return signature of
``RegistrationProfileManager.activate_user``. A tuple containing the User
instance and a boolean of whether or not said user was activated is now
returned.
  `#309 <https://github.com/macropin/django-registration/pull/309>`_.
* Bugfix: Updates `pt_BR` translation messages. -
`#305 <https://github.com/macropin/django-registration/pull/305>_`
* Bugfix: Update all translation strings with `django-admin makemessages --all`. -
`#304 <https://github.com/macropin/django-registration/pull/304>_`
* Feature: Configure from email address from ``Site`` object. -
`#294 <https://github.com/macropin/django-registration/pull/294>_`

Version 1.8, 03 October, 2017
----------------
* Bugfix: Add `outlook.com` to the list of free email providers. -
`#287 <https://github.com/macropin/django-registration/pull/287>_`
* Documentation: Add possible settings for activation emails. -
`#283 <https://github.com/macropin/django-registration/pull/282>_`
* Feature: Added `REGISTRATION_ADMINS` setting to support different admins
(than those in `ADMINS`) in charge of registration. Falls back to `ADMINS` in
case this is not set. -
`#279 <https://github.com/macropin/django-registration/pull/279>_`
* Documentation: Added documentation regarding admin approval registration. -
`#279 <https://github.com/macropin/django-registration/pull/279>_`